# litmus

./: .gitignore  .gitignore.txt  .readthedocs.yml  404.html  CONTRIBUTING.md  GithubPage.url  LICENSE  Makefile  New Text Document.txt  README.md  _autocommit.bat  _mkdocspush.bat  _push_dev_to_main.bat  custom.css  et 564a1cc --hard  index.html  mkdocs.yml  nested_sampling.py  objects.inv  pyproject.toml  runtest.py  sitemap.xml  test.csv  todo.md
.github/workflows/: deploy.yml  docs.yml
GP_working/: index.html
_utils/: index.html
docs/: GP_working.md  _utils.md  doctest.md  fitting_methods.md  gettingstarted.md  index.md  lightcurve.md  lin_scatter.md  litmusclass.md  logging.md  mocks.md  models.md
env/: pyvenv.cfg
examples/: 1D_lag_posterior.py  Basic_tutorial.ipynb  Common_mistakes.ipynb  Custom_statsmodel_example.ipynb  JAVELIKE_test.py  JAVELIN_HeScan_Comparison.ipynb  Model_comparison_example.ipynb  _make_testcurves.py  _scannertest.py  advanced_fitting.ipynb  basic_fitting.ipynb  chain_ICCF.csv  chain_hessian.csv  chain_javelin.csv  chain_prior.csv  custom_statsmodel_example.py  example.py  example_01.ipynb  feed_test.py  grid_plot.py  hence.ipynb  high_SNR_test.py  import_test.py  integ_compare.py  integ_test_01.py  lc_1.csv  lc_2.csv  lightcurve_gentest.ipynb  lightcurve_gentest.py  litmus_class_example.py  nested_sampling.ipynb  no_season_test.py  null_test.py  polychord_example.py  profiling_test.py  scan_test.py  subsample_example.py  test.py  test_02.py  test_hessianscan.py  (+2 more)
fitting_methods/: index.html
gettingstarted/: index.html
lightcurve/: index.html
lin_scatter/: index.html
litmus/: ICCF_working.py  __init__.py  _types.py  _utils.py  classes.py  clustering.py  extant_numpyro.py  fitting_methods.py  gp_working.py  lightcurve.py  lin_scatter.py  litmus.py  litmusclass.py  logging.py  main.py  mocks.py  models.py  testing.py
litmus/_ss/: main.py  (+2 more)
litmusclass/: index.html
logging/: index.html
mocks/: index.html
models/: index.html
module_test/: ICCF_working_test.py  _utils_test.py  fitting_methods_test.py  lin_scatter_test.py  litmusclass_test.py  logging_test.py  mocks_test.py  models_test.py
module_tests/: mt__utils.py  mt_clustering.py  mt_fitting_methods.py
neglag_work/: AS_mock_run.py  load_lcs.py  neglag_model.py  neglag_model_test.py
search/: search_index.json
site/: 404.html  custom.css  index.html  objects.inv  sitemap.xml
src/litmus/: ICCF_working.py  __init__.py  _utils.py  fitting_methods.py  gp_working.py  lightcurve.py  litmusclass.py  mocks.py  models.py  pyproject.toml
src/litmus/_ss/: clustering.py  testimport01.py  testimport02.py
test/: ICCF_working_test.py  _utils_test.py  fitting_methods_test.py  lin_scatter_test.py  litmusclass_test.py  logging_test.py  mocks_test.py  models_test.py
testing/: 1D_lag_posterior.py  chain_javelin.csv  for_louis.md  grid_plot.py  high_SNR_test.py  integ_compare.py  litmus_class_example.py  multilag_test.py  no_season_test.py  scan_test.py  subsample_example.py
tests/: runtest.py  simba_make.py  simba_runtest.py  slurm_trigger.sh
(+130 files in other folders)
