[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LITMUS"
version = "0.1.0"
authors = [
  { name="Hugh McDougall", email="hughmcdougallemail@gmail.com" },
]
dependencies = [
  'jax',
  'jaxlib',
  'jaxopt',
  'numpyro',
  'tinygp',
  'matplotlib',
  'numpy',
  # 'etils',
  # 'tensorflow_probability',
  # 'jaxns',
  'scikit-learn',
  'scipy==1.11.4',
  'chainconsumer==0.34.0',
]

description = "JAX-based lag recovery for AGN reverberation mapping"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/HughMcDougall/LITMUS"