
[project]
name = "LITMUS"
version = "0.2.0"
authors = [
  { name="Hugh McDougall", email="hughmcdougallemail@gmail.com" },
]
description = "JAX-based lag recovery for AGN reverberation mapping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'jax==0.4.31',
  'jaxlib',
  'jaxopt',
  'numpyro',
  'tinygp',
  'matplotlib',
  'numpy',
  'scikit-learn',
  'scipy',
  'chainconsumer',
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
jaxns = ["etils", "tensorflow_probability", "jaxns"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/HughMcDougall/LITMUS"