
[project]
name = "LITMUS"
version = "1.0.0"
authors = [
  { name="Hugh McDougall", email="hughmcdougallemail@gmail.com" },
]
description = "JAX-based lag recovery for AGN reverberation mapping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'jax==0.4.31',
  'jaxlib>=0.4.31',
  'jaxopt>=0.8.3',
  'numpyro>=0.15.3',
  'tinygp>=0.3.0',
  'matplotlib>=3.9.2',
  'numpy>=1.26.4',
  'scikit-learn>1.5.2',
  'scipy>=1.14.1',
  'chainconsumer>=1.1.2',
  'typing>=2.50'
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
jaxns = ["etils", "tensorflow_probability", "jaxns"]


[project.urls]
repository = "https://github.com/HughMcDougall/LITMUS"
