[project]
name = "litmus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HughMcDougall", email = "hughmcdougallemail@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
litmus = "litmus:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
